[gd_scene load_steps=2 format=3 uid="uid://c5y8qxr2jvw7h"]

[ext_resource type="Script" path="res://minimap.gd" id="1_minimap"]

[node name="Minimap" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
grow_horizontal = 0
script = ExtResource("1_minimap")

[node name="MinimapContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinimapTexture" type="TextureRect" parent="MinimapContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayerMarker" type="Polygon2D" parent="."]
position = Vector2(100, 100)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, -6, 4, 4, -4, 4)
z_index = 1

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="MapCamera" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
projection = 1
size = 220.0
far = 200.0
